--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,9 @@ dist
 
 # TernJS port file
 .tern-port
+
+# VSCode extension localhistory files
+.history
+
+# rollup-plugin-visualize result files
+stats.html
